<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#AA000000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_auto_install_open"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_your_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="left"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/app_auto_install_setting_desc"
            android:textColor="#B2B2B2"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/autoinstall_guid_confirm"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/sc_blue_corner"
            android:text="@string/app_auto_install_setting_button"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>