<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.lt.android.widget.ActionBar
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:MyActionBar="def" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="13dp"
        android:paddingBottom="12dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="13dp"
                    android:text="@string/version"
                    android:textColor="#777777"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.1"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system"
                    android:textColor="#777777"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/android_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Android 5.1"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="13dp"
                    android:text="@string/model"
                    android:textColor="#777777"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/device_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="华为荣耀6"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/network"
                    android:textColor="#777777"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/network_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="WIFI"
                    android:textColor="@color/light_black"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_grey" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ListView
            android:id="@+id/FBListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:divider="@color/background_color"
            android:paddingBottom="12dp"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="54dp"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="8dp"
        android:paddingTop="7dp">

        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/sc_camera" />

        <EditText
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignRight="@+id/send"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@+id/camera"
            android:background="@drawable/bg_edittext"
            android:hint="@string/please_input_message"
            android:paddingLeft="10dp"
            android:textColor="#C4C4C4"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/send"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/sc_blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/sc_send"
            android:textSize="15sp" />

    </RelativeLayout>
</LinearLayout>