<?xml version="1.0" encoding="utf-8"?>
<cn.lt.pullandloadmore.LoadingLayout android:id="@+id/loadingLayout"
                                     xmlns:android="http://schemas.android.com/apk/res/android"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:background="@color/grey_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_grey"/>

        <RelativeLayout
            android:id="@+id/upgrade_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:visibility="gone">

            <Button
                android:id="@+id/upgrade"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:background="@drawable/sc_blue_corner"
                android:stateListAnimator="@null"
                android:text="@string/upgrade"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <Button
                android:id="@+id/close"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/upgrade"
                android:background="@drawable/gray_white_selector"
                android:stateListAnimator="@null"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/upgrade_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="发现应用市场新版本V1.0.2"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/divider_grey"
                />

            <Button
                android:id="@+id/one_key_download"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/sc_blue_corner"
                android:stateListAnimator="@null"
                android:text="@string/one_key_download"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</cn.lt.pullandloadmore.LoadingLayout>